[tool.poetry]
name = "airmobisim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.0"
numpy = "==1.19.5"
docutils = ">=0.3"
grpcio = "==1.38.1"
grpcio-tools = "==1.38.1"
geopandas = "==0.9.0"
pyproj = "==3.1.0"
Shapely = "==1.7.1"
Fiona = "==1.8.20"
matplotlib = "*"
plotly = "*"
spicy = "*"
pyyaml = "*"
google-api-python-client = "==2.21.0"
conan = "==1.43.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
