[tool.poetry]
name = "airmobisim"
version = "0.1"
description = ""
authors = ["Tobias Hardes", "Dalisha Logan", "Touhid Hossain Pritom"]

[tool.poetry.dependencies]
python = "3.11.2"
numpy = ">=1.24.0"  
docutils = ">=0.3"
grpcio = "==1.51.1"  
grpcio-tools = "==1.51.1"
geopandas = "==0.12.2"  
pyproj = "==3.4.1"
Shapely = "==1.8.5"
Fiona = "==1.9.5"
matplotlib = "*"
plotly = "*"
scipy = "*"  
pyyaml = "*"
google-api-python-client = "==2.21.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
